oriental dishes initial commit

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -409,7 +409,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-main">
-            <img src="{{ url_for('static', filename='assets/img/menu/main_course/crispy_fried_chicken_tender.jpg') }}"
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/crispy-fried-chicken-tender.jpg') }}"
               class="menu-img" alt="Crispy Fried Chicken Tender">
             <div class="menu-content">
               <a>Crispy Fried Chicken Tender</a><span>€14.95
@@ -507,13 +507,27 @@
           <!-- ======= Menu Oriental Section ======= -->
 
           <div class="col-lg-6 menu-item filter-oriental">
-            <img src="{{ url_for('static', filename='assets/img/menu/chicken-curry.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/chicken-curry.jpg') }}" class="menu-img"
+              alt="Chicken Curry">
             <div class="menu-content">
               <a>Chicken Curry</a><span>€15.95
               </span>
             </div>
             <div class="menu-ingredients">
               Traditional chicken curry dish, served with rice or chips
+              (contains: 1,6)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/fillet-beef-curry.jpeg') }}"
+              class="menu-img" alt="Fillet Beef Curry">
+            <div class="menu-content">
+              <a>Fillet Beef Curry</a><span>€18.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Beef fillet cooked in our special curry sauce, served with rice or chips
               (contains: 1,6)
             </div>
           </div>
