--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -533,6 +533,59 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/vegeterian-curry.jpg') }}"
+              class="menu-img" alt="Vegeterian Curry">
+            <div class="menu-content">
+              <a>Vegeterian Curry</a><span>€13.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Our carefully selected vegetables, cooked in our special curry sauce and served with rice or chips
+              (contains: V,1,6)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/thai-crispy-chicken.jpg') }}"
+              class="menu-img" alt="Thai Sweet Chilli Crispy Shredded Chicken">
+            <div class="menu-content">
+              <a>Thai Sweet Chilli Crispy Shredded Chicken</a><span>€15.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Traditional sweet chilli chicken, served with rice or chips
+              (contains: C,4,6,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/sweet-sour-chicken.jpg') }}"
+              class="menu-img" alt="Sweet & Sour Crispy Chicken">
+            <div class="menu-content">
+              <a>Sweet & Sour Crispy Chicken</a><span>€15.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Crispy chicken bites in a traditional sweet and sour sauce, served with rice or chips
+              (contains: C,4,6,9,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/crispy-cod.jpeg') }}" class="menu-img"
+              alt="Crispy Cod Of Your Choice">
+            <div class="menu-content">
+              <a>Crispy Cod Of Your Choice</a><span>€16.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Crispy Cod bites cooked in your favourite flavour, you can choose from Dry Salt Chilli, Thai Sweet Chilli
+              or Sweet and Sour sauce, served with rice or chips
+              (contains: C,4,6,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
             <img src="{{ url_for('static', filename='assets/img/menu/prawn-noodles.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
               <a>Stir Fried Prawn Noodles</a><span>€18.95
@@ -541,19 +594,6 @@
             <div class="menu-ingredients">
               Traditional prawn noodles, served with rice or chips
               (contains: 1,4,6,9,11)
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-oriental">
-            <img src="{{ url_for('static', filename='assets/img/menu/thai-crispy-chicken.jpg') }}" class="menu-img"
-              alt="">
-            <div class="menu-content">
-              <a>Thai Sweet Chilli Crispy Shredded Chicken</a><span>€15.95
-              </span>
-            </div>
-            <div class="menu-ingredients">
-              Traditional sweet chilli chicken, served with rice or chips
-              (contains: C,4,6,11)
             </div>
           </div>
 
