--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -586,7 +586,47 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-oriental">
-            <img src="{{ url_for('static', filename='assets/img/menu/prawn-noodles.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/vegeterian-noodles.jpg') }}"
+              class="menu-img" alt="Stir Fried Vegeterian Noodles">
+            <div class="menu-content">
+              <a>Stir Fried Vegeterian Noodles</a><span>€14.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Perfectly cooked stir fried rice noodles with sautèed fresh vegetables
+              (contains: 1,4,6,9.11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/chicken-noodles.jpg') }}" class="menu-img"
+              alt="Stir Fried Chicken Noodles">
+            <div class="menu-content">
+              <a>Stir Fried Chicken Noodles</a><span>€16.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Perfectly cooked stir fried rice noodles with sautèed fresh vegetables and chicken
+              (contains: 1,4,6,9.11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/beef-fillet-noodles.jpg') }}"
+              class="menu-img" alt="Stir Fried Beef Fillet Noodles">
+            <div class="menu-content">
+              <a>Stir Fried Beef Fillet Noodles</a><span>€18.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Perfectly cooked stir fried rice noodles with sautèed fresh vegetables and beef fillet
+              (contains: 1,4,6,9.11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/prawn-noodles.jpg') }}" class="menu-img"
+              alt="Stir Fried Prawn Noodles">
             <div class="menu-content">
               <a>Stir Fried Prawn Noodles</a><span>€18.95
               </span>
@@ -598,7 +638,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-oriental">
-            <img src="{{ url_for('static', filename='assets/img/menu/roasted-duck.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/oriental/roast-duck.jpg') }}" class="menu-img"
+              alt="Crispy Roast Duck">
             <div class="menu-content">
               <a>Crispy Roast Duck</a><span>€19.95
               </span>
