added finger platters

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -351,6 +351,42 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/finger-platter-for-1.jpg') }}"
+              class="menu-img" alt="Finger Platter For 1">
+            <div class="menu-content">
+              <a>Finger Platter For 1</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Tiger prawns in filo pastry, spicy chicken wings, cocktail sausages, chicken nuggets, spring roll, garlic
+              bread, onion rings and chips (contains: 1,2,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/finger-platter-for-2.jpeg') }}"
+              class="menu-img" alt="Finger Platter For 2">
+            <div class="menu-content">
+              <a>Finger Platter For 2</a><span>€21.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Tiger prawns in filo pastry, spicy chicken wings, cocktail sausages, chicken nuggets, spring roll, garlic
+              bread, onion rings and chips (contains: 1,2,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/finger-platter-for-5.jpg') }}"
+              class="menu-img" alt="Finger Platter For 5">
+            <div class="menu-content">
+              <a>Finger Platter For 5</a><span>€39.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Tiger prawns in filo pastry, spicy chicken wings, cocktail sausages, chicken nuggets, spring roll, garlic
+              bread, onion rings and chips (contains: 1,2,4,6,7)
+            </div>
+          </div>
+
           <!-- End Menu Starters Section -->
 
           <!--  ======= Menu Main Section ======= -->
