--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -691,20 +691,43 @@
           <!-- ======= Menu Specialty Section ======= -->
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="{{ url_for('static', filename='assets/img/menu/fillet-steak.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/specialty/sirloin-steak.jpg') }}" class="menu-img"
+              alt="8oz Sirloin Steak">
             <div class="menu-content">
-              <a>Fillet Steak</a><span>$30.95</span>
+              <a>8oz Sirloin Steak</a><span>$24.95</span>
             </div>
             <div class="menu-ingredients">
-              Served with sauteed onions and mushrooms, chips and pepper sauce (contains: 1,6)
+              Served with sautèed onions and mushrooms, chips and pepper sauce (contains: 1,6)
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="{{ url_for('static', filename='assets/img/menu/lemon-grilled-cod.jpg') }}" class="menu-img"
-              alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/specialty/ribeye-steak.jpg') }}" class="menu-img"
+              alt="8oz Ribeye Steak">
             <div class="menu-content">
-              <a>Grilled Cod with Lemony Prawn</a><span>$30.95</span>
+              <a>8oz Ribeye Steak</a><span>$24.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Served with sautèed onions and mushrooms, chips and pepper sauce (contains: 1,6)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="{{ url_for('static', filename='assets/img/menu/specialty/fillet-steak.jpg') }}" class="menu-img"
+              alt="Fillet Steak">
+            <div class="menu-content">
+              <a>Fillet Steak</a><span>$30.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Served with sautèed onions and mushrooms, chips and pepper sauce (contains: 1,6)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="{{ url_for('static', filename='assets/img/menu/specialty/grilled-cod-with-prawns.jpg') }}"
+              class="menu-img" alt="Grilled Cod with Lemony Prawns">
+            <div class="menu-content">
+              <a>Grilled Cod with Lemony Prawns</a><span>$24.95</span>
             </div>
             <div class="menu-ingredients">
               Served with mash and veg or chips (contains: 3,6,7,10)
