--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -734,6 +734,18 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="{{ url_for('static', filename='assets/img/menu/specialty/half-roast-duck.jpg') }}"
+              class="menu-img" alt="Crispy Half Roast Duck">
+            <div class="menu-content">
+              <a>Crispy Half Roast Duck</a><span>$24.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Roasted with stuffing and served with mash and veg or chips, and our special orange sauce (contains:
+              1,6,7,11)
+            </div>
+          </div>
+
           <!-- End Menu Specialty Section -->
 
         </div>
