menu panini section first commit

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -197,6 +197,8 @@
               <li data-filter=".filter-main">Main Course</li>
               <li data-filter=".filter-oriental">Oriental Dishes</li>
               <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter=".filter-panini">Burgers & Panini</li>
+              <li data-filter=".filter-desserts">Desserts</li>
             </ul>
           </div>
         </div>
@@ -747,6 +749,48 @@
           </div>
 
           <!-- End Menu Specialty Section -->
+
+          <!-- ======= Menu Panini Section ======= -->
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/crispy-spicy-chicken-burger.jpg') }}"
+              class="menu-img" alt="Crispy Spicy Chicken Burger">
+            <div class="menu-content">
+              <a>Crispy Spicy Chicken Burger</a><span>$15.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Marinated in cajun spices and gourmet breaded escalope of chicken breast, served with lettuce and tomato,
+              cajun mayo and chips (contains:
+              1,4,6,7,10,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/cajun-chicken-fillet-ciabatta.jpg') }}"
+              class="menu-img" alt="Spicy Cajun Chicken Fillet Ciabatta">
+            <div class="menu-content">
+              <a>Spicy Cajun Chicken Fillet Ciabatta</a><span>$15.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Grilled chicken fillet with fried onions, mushrooms, lettuce, mayo and chips (contains:
+              1,4,6,7,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/steak-ciabatta.jpg') }}" class="menu-img"
+              alt="Steak Ciabatta">
+            <div class="menu-content">
+              <a>Steak Ciabatta</a><span>$17.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Grilled 6oz sirloin steak with stir fried onions and mushrooms, lettice and tomato, served with dressing
+              and chips (contains:
+              1,4,6,7,11)
+            </div>
+          </div>
+
+          <!-- End Menu Panini Section -->
 
         </div>
 
