--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -790,6 +790,54 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/blt-sandwich.jpg') }}" class="menu-img"
+              alt="B.L.T. Sandwich">
+            <div class="menu-content">
+              <a>B.L.T. Sandwich</a><span>$13.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Toasted with crispy bacon, lettuce, tomato and mayo, served with chips (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/chicken-club-sandwich.jpg') }}"
+              class="menu-img" alt="Chicken Club Sandwich">
+            <div class="menu-content">
+              <a>Chicken Club Sandwich</a><span>$14.50</span>
+            </div>
+            <div class="menu-ingredients">
+              Toasted sandwich with chicken fillet, ham, cheese, tomato and mayo, served with chips (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/toasted-sandwich.jpeg') }}" class="menu-img"
+              alt="Toasted Sandwich">
+            <div class="menu-content">
+              <a>Toasted Sandwich</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Toasted with ham, cheddar cheese, red onions and tomato, served with chips (contains:
+              1,4,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-panini">
+            <img src="{{ url_for('static', filename='assets/img/menu/panini/soup-and-toast.jpg') }}" class="menu-img"
+              alt="Homemade Soup and Toasted Special">
+            <div class="menu-content">
+              <a>Homemade Soup and Toasted Special</a><span>$11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Perfect combination of the Soup of the day and toasted sandwich (contains:
+              V,C,1,4,6,7,9)
+            </div>
+          </div>
+
           <!-- End Menu Panini Section -->
 
         </div>
