kids menu init commit

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -198,6 +198,7 @@
               <li data-filter=".filter-oriental">Oriental Dishes</li>
               <li data-filter=".filter-specialty">Specialty</li>
               <li data-filter=".filter-panini">Burgers & Panini</li>
+              <li data-filter=".filter-kids">Kids Menu</li>
               <li data-filter=".filter-desserts">Desserts</li>
             </ul>
           </div>
@@ -839,6 +840,22 @@
           </div>
 
           <!-- End Menu Panini Section -->
+
+          <!-- ======= Kids Menu Section ======= -->
+
+          <div class="col-lg-6 menu-item filter-kids">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/popcorn-chicken-and-chips.jpg') }}"
+              class="menu-img" alt="Popcorn Chicken and Chips">
+            <div class="menu-content">
+              <a>Popcorn Chicken and Chips</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <!-- End Kids Menu Section -->
 
         </div>
 
