added kids menu

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -855,6 +855,42 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-kids">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/chicken-goujons-and-chips.jpg') }}"
+              class="menu-img" alt="Chicken Goujons and Chips">
+            <div class="menu-content">
+              <a>Chicken Goujons and Chips</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-kids">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/chicken-nuggets-chips.jpg') }}"
+              class="menu-img" alt="Chicken Nuggets and Chips">
+            <div class="menu-content">
+              <a>Chicken Nuggets and Chips</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-kids">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/sausages-chips.jpg') }}" class="menu-img"
+              alt="Sausages and Chips">
+            <div class="menu-content">
+              <a>Sausages and Chips</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,6)
+            </div>
+          </div>
+
           <!-- End Kids Menu Section -->
 
         </div>
