--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -891,7 +891,35 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-kids">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/tomato-penne-pasta.jpg') }}" class="menu-img"
+              alt="Pasta Penne with Tomato Sauce">
+            <div class="menu-content">
+              <a>Pasta Penne with Tomato Sauce</a><span>$8.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,7,9)
+            </div>
+          </div>
+
           <!-- End Kids Menu Section -->
+
+          <!-- ======= Desserts Menu ======= -->
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/kids/sausages-chips.jpg') }}" class="menu-img"
+              alt="Sausages and Chips">
+            <div class="menu-content">
+              <a>Homemade Apple Pie</a><span>$9.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Includes free ice cream dessert (contains:
+              1,6)
+            </div>
+          </div>
+
+          <!-- End Desserts Menu -->
 
         </div>
 
