--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -908,14 +908,99 @@
           <!-- ======= Desserts Menu ======= -->
 
           <div class="col-lg-6 menu-item filter-desserts">
-            <img src="{{ url_for('static', filename='assets/img/menu/kids/sausages-chips.jpg') }}" class="menu-img"
-              alt="Sausages and Chips">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/homemade-apple-pie.jpg') }}"
+              class="menu-img" alt="Homemade Apple Pie">
             <div class="menu-content">
-              <a>Homemade Apple Pie</a><span>$9.95</span>
+              <a>Homemade Apple Pie</a><span>$5.95</span>
             </div>
             <div class="menu-ingredients">
-              Includes free ice cream dessert (contains:
-              1,6)
+              Perfect combination of tart and sweet apples, warm spices and flaky pastry (contains:
+              1,4,7,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/apple-crumble.jpg') }}" class="menu-img"
+              alt="Apple Crumble">
+            <div class="menu-content">
+              <a>Apple Crumble</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Warm bowl of humble crumble and a generous drizzle of finest custard (contains:
+              1,7,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/baileys-cheesecake.jpg') }}"
+              class="menu-img" alt="Baileys of Lemon Cheese Cake">
+            <div class="menu-content">
+              <a>Baileys Cheese Cake</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Featuring a chocolate cookie crust, creamy Baileys Irish Cream filling and a thick layer of chocolate
+              ganache (contains:
+              1,4,7,8)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/lemon-cheesecake.jpeg') }}"
+              class="menu-img" alt="Lemon Cheese Cake">
+            <div class="menu-content">
+              <a>Lemon Cheese Cake</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Lemony cheesecake filling on cookie crust, topped with a layer of lucious lemon curd (contains:
+              1,4,7,8)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/banoffee-pie.jpg') }}" class="menu-img"
+              alt="Banoffee Pie">
+            <div class="menu-content">
+              <a>Banoffee Pie</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Perfect combination of just-ripe-enough bananas, toffee, and heaps of fluffy whipped cream (contains:
+              1,4,7,8)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/chocolate-cake.jpg') }}" class="menu-img"
+              alt="Chocolate Cake">
+            <div class="menu-content">
+              <a>Chocolate Cake</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Layers of velvety, rich chocolate, complemented with a silky fudge frosting (contains:
+              1,4,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/sticky-toffee-pudding.jpg') }}"
+              class="menu-img" alt="Sticky Toffee Pudding">
+            <div class="menu-content">
+              <a>Sticky Toffee Pudding</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Moist brown sugar sponge cake, served drizzled with toffee sauce (contains:
+              1,4,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="{{ url_for('static', filename='assets/img/menu/desserts/icecream.jpg') }}" class="menu-img"
+              alt="Selection of Ice Cream">
+            <div class="menu-content">
+              <a>Selection of Ice Cream</a><span>$5.50</span>
+            </div>
+            <div class="menu-ingredients">
+              Selectin of Ice Cream of your favourite flavours (contains:
+              7)
             </div>
           </div>
 
